--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <html>
   <header>
     <title>Hello world</title>
+    <link rel="stylesheet" href="/style.css" />
+    <script src="/script.js"></script>
   </header>
   <body>
     Hello, world!
