--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <header>
     <title>Hello world</title>
     <link rel="stylesheet" href="/style.css" />
-    <script src="/script.js"></script>
+    <script type="module" src="/script.js"></script>
   </header>
   <body>
     Hello, world!
