improve UI a lot

--- a/front/src/error.html
+++ b/front/src/error.html
@@ -1,6 +1,10 @@
 <html>
-  <header><title>Hello world: Error</title></header>
+  <head>
+    <title>Hooktrack</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
   <body>
-    Uh oh, you reached the error page!
+    <div id="root"></div>
+    <script type="module" src="error.tsx"></script>
   </body>
 </html>
