--- a/front/src/index.html
+++ b/front/src/index.html
@@ -1,10 +1,10 @@
 <html>
   <header>
-    <title>Hello world</title>
+    <title>Hooktrack</title>
     <link rel="stylesheet" href="./style.css" />
   </header>
   <body>
     <div id="root"></div>
-    <script type="module" src="./script.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
