--- a/front/src/404.html
+++ b/front/src/404.html
@@ -1,6 +1,10 @@
 <html>
-  <header><title>Not Found</title></header>
+  <head>
+    <title>Hooktrack</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
   <body>
-    Page not found.
+    <div id="root"></div>
+    <script type="module" src="404.tsx"></script>
   </body>
 </html>
